Add up down icon to format toggler.

--- a/ColorPicker.css
+++ b/ColorPicker.css
@@ -54,7 +54,8 @@ color-value-container > input:not(:first-child) {
 
 format-toggler {
   border-radius: 2px;
-  display: block;
+  display: flex;
+  flex-direction: row;
   height: 24px;
   margin-left: 10%;
   margin-top: 2%;
