--- a/ColorPicker.css
+++ b/ColorPicker.css
@@ -69,7 +69,7 @@ hue-slider > canvas {
   width: 100%;
 }
 
-color-selector-ring {
+color-selection-ring {
   border: 2px solid #FFFFFF;
   border-radius: 50%;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
@@ -77,12 +77,12 @@ color-selector-ring {
   position: absolute;
 }
 
-color-well > color-selector-ring {
+color-well > color-selection-ring {
   height: 12px;
   width: 12px;
 }
 
-hue-slider > color-selector-ring {
+hue-slider > color-selection-ring {
   height: 16px;
   margin-top: 7%;
   width: 16px;
