Rename ColorSwatch to ColorViewer and add class description.

--- a/ColorPicker.css
+++ b/ColorPicker.css
@@ -48,7 +48,7 @@ eye-dropper {
   width: 32px;
 }
 
-color-swatch {
+color-viewer {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.19);
   box-sizing: border-box;
