--- a/ColorPicker.css
+++ b/ColorPicker.css
@@ -2,9 +2,6 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
  */
-body {
-  font-family: sans-serif;
-}
 
 .color-picker-main {
   border: 0;
@@ -13,6 +10,7 @@ body {
 
 color-picker {
   background: #FFFFFF;
+  border: 1px solid #bfbfbf;
   display: flex;
   flex-direction: column;
   height: 250px;
@@ -47,10 +45,31 @@ hue-slider {
 }
 
 eye-dropper {
+  border-radius: 2px;
   height: 32px;
   margin-left: 2%;
   position: relative;
   width: 32px;
+}
+
+eye-dropper.hidden {
+  visibility: hidden;
+}
+
+eye-dropper:not(.selected):hover {
+  background-color: #F7F7F7;
+}
+
+eye-dropper.selected {
+  background-color: #CECECE;
+}
+
+eye-dropper > svg {
+  height: 16px;
+  left: 25%;
+  position: absolute;
+  top: 25%;
+  width: 16px;
 }
 
 color-viewer {
@@ -69,13 +88,9 @@ color-well > canvas {
 
 hue-slider > canvas {
   border-radius: 2px;
-  height: 11px;
+  height: 12px;
   margin-top: 7%;
   width: 100%;
-}
-
-canvas {
-  touch-action: none;
 }
 
 color-selection-ring {
@@ -84,6 +99,15 @@ color-selection-ring {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.4);
   box-sizing: border-box;
   position: absolute;
+}
+
+color-selection-ring:focus {
+  /* Simulate the outline using box-shadow because it follows the border radius
+   * (unlike outline).
+   */
+  box-shadow: 0px 0px 0px 2px;
+  color: -webkit-focus-ring-color;
+  outline: none;
 }
 
 color-well > color-selection-ring {
@@ -129,7 +153,7 @@ input {
 }
 
 color-value-container > input:not(:first-child) {
-  margin-left: 1%;
+  margin-left: 4%;
 }
 
 format-toggler {
